<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.BMIActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/bmitoolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/white" />

    <RadioGroup
        android:id="@+id/units"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bmitoolbar"
        android:layout_margin="10dp"
        android:background="@drawable/tab_background"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/metricUnit"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/tab_selector"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/metric"
            android:textColor="@drawable/tab_color_selector"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/usUnit"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/tab_selector"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:text="@string/us"
            android:textColor="@drawable/tab_color_selector"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/MetricUnitWeight"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/units"
        android:layout_margin="10dp"
        android:visibility="visible"
        app:boxStrokeColor="@color/green"
        app:hintTextColor="@color/green"
        tools:visibility="visible">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight"
            android:inputType="numberDecimal"
            android:textColor="#363A43"
            android:textColorHint="#7A8089" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/UsUnitWeight"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/units"
        android:layout_margin="10dp"
        android:visibility="gone"
        app:boxStrokeColor="@color/green"
        app:hintTextColor="@color/green"
        tools:visibility="visible">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/usWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usWeight"
            android:inputType="numberDecimal"
            android:textColor="#363A43"
            android:textColorHint="#7A8089" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/MetricUnitHeight"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/MetricUnitWeight"
        android:layout_margin="10dp"
        android:visibility="visible"
        app:boxStrokeColor="@color/green"
        app:hintTextColor="@color/green"
        tools:visibility="visible">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/height"
            android:inputType="numberDecimal"
            android:textColor="#363A43"
            android:textColorHint="#7A8089" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/usMBI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/UsUnitWeight"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:visibility="visible">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usUnitHeight"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:boxStrokeColor="@color/green"
            app:hintTextColor="@color/green">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/feet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/feet"
                android:inputType="numberDecimal"
                android:textColor="#363A43"
                android:textColorHint="#7A8089" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usUnitHeight2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:boxStrokeColor="@color/green"
            app:hintTextColor="@color/green">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/inch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/inch"
                android:inputType="numberDecimal"
                android:textColor="#363A43"
                android:textColorHint="#7A8089" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/allResults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/MetricUnitHeight"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible"
        tools:visibility="visible">

        <TextView
            android:id="@+id/yourBMI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingTop="5dp"
            android:text="@string/yourBMI"
            android:textColor="#363A43"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/result1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingTop="5dp"
            android:text="@string/result1"
            android:textColor="#363A43"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/result2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/result2"
            android:textColor="#363A43"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/result3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/result3"
            android:textColor="#363A43"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/allResults"
        android:layout_gravity="bottom"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/green"
        android:text="@string/calculate"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />
</RelativeLayout>