<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExerciseActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:theme="@style/Theme.WorkoutApp"
        android:background="@color/white"
        app:titleTextColor="@color/black"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/exerciseImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_jumping_jacks"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/exerciseName"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:contentDescription="@string/image" />
    
    <TextView
        android:id="@+id/getReady"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ready"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/green"
        app:layout_constraintBottom_toTopOf="@+id/firstLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    
    <FrameLayout
        android:id="@+id/firstLayout"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/ripple_background"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <ProgressBar
            android:id="@+id/firstProgressBar"
            android:layout_width="80dp"
            android:layout_height="100dp"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_gravity="center"
            android:background="@drawable/circular_progress_gray"
            android:progressDrawable="@drawable/circular_progress_bar"
            android:indeterminate="false"
            android:max="10"
            android:progress="10"
            android:rotation="-90" />

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/accent_background"
            android:gravity="center">
            <TextView
                android:id="@+id/firstTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="#FFFFFF"
                tools:text="10"/>
        </LinearLayout>
    </FrameLayout>

    <TextView
        android:id="@+id/upcoming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/upcoming_exercise"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:visibility="visible"
        tools:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstLayout"
        app:layout_constraintBottom_toTopOf="@id/next"/>

    <TextView
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/next"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:visibility="visible"
        tools:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upcoming"/>

    <TextView
        android:id="@+id/exerciseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/green"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/exerciseImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <FrameLayout
        android:id="@+id/secondLayout"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/ripple_background"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exerciseName">

        <ProgressBar
            android:id="@+id/secondProgressBar"
            android:layout_width="80dp"
            android:layout_height="100dp"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_gravity="center"
            android:background="@drawable/circular_progress_gray"
            android:progressDrawable="@drawable/circular_progress_bar"
            android:indeterminate="false"
            android:max="30"
            android:progress="300"
            android:rotation="-90" />

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/accent_background"
            android:gravity="center">
            <TextView
                android:id="@+id/secondTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="#FFFFFF"
                tools:text="30"/>

        </LinearLayout>
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/exerciseNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        tools:listitem="@layout/recycler_view_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/secondLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </androidx.recyclerview.widget.RecyclerView>
</androidx.constraintlayout.widget.ConstraintLayout>